--- a/index.html
+++ b/index.html
@@ -6,14 +6,27 @@
     <title>Time Flow</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel='stylesheet' type='text/css' media='screen' href='style/main.css'>
+    <script src='scripts/stopwatch.js'></script>
 </head>
 <body>
     <h2>Welcome to Time Flow!</h2>
-    <div id="timer">
-        <h2>TIMER</h2>
-        <input type="text" id="minutes">
-        <button id="startTimer" onclick="timer()">Start</button><button id="pauseTimer" onclick="ptimer()">Pause</button>
-        <h3 id="countdown">00:00</h3>
+    <div id="timeBlocks">
+        <div id="timer" class="timeBlock">
+            <h2>TIMER</h2>
+            <input type="text" id="minutes">
+            <button id="startTimer" onclick="startReset()">Start</button>
+            <h3 id="countdown">00:00</h3>
+        </div>
+        <div id="stopWatch" class="timeBlock">
+            <h2>STOPWATCH</h2>
+            <button id="startstop" onclick="startStop()">Start</button>
+            <button onclick="reset()">Reset</button>
+            <button id="recordWatch" onclick="recordwatch()">Record</button>
+            <button id="RecordsClear" onclick="clearRecords()">Clear</button>
+            <h3 id="countup">00:00:00</h3>
+            <div id="listRecords">
+            </div>
+        </div>
     </div>
 </body>
 <script src='scripts/timer.js'></script>
