--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Flow 2 Time</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel='stylesheet' type='text/css' media='screen' href='style/main.css'>
+    <link rel="icon" href="/img/time.ico" type="image/icon type">
 </head>
 <body id="main">
     <h2>Welcome to Flow 2 Time</h2>
