--- a/stopwatch.html
+++ b/stopwatch.html
@@ -7,6 +7,7 @@
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel='stylesheet' type='text/css' media='screen' href='style/main.css'>
     <link rel='stylesheet' type='text/css' media='screen' href='style/style-stopwatch.css'>
+    <link rel="icon" href="/img/time.ico" type="image/icon type">
     <script src='scripts/stopwatch.js'></script>
 </head>
 <body>
