RealTime + SecondsIn Added + Mobile Responsive fix + bugs fix

--- a/index.html
+++ b/index.html
@@ -3,17 +3,21 @@
 <head>
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-    <title>Flow 2 Time</title>
+    <title>Flow2Time</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel='stylesheet' type='text/css' media='screen' href='style/main.css'>
     <link rel="icon" href="/img/time.ico" type="image/icon type">
 </head>
 <body id="main">
-    <h2>Welcome to Flow 2 Time</h2>
+    <h2 id="welcome">Welcome to Flow2Time</h2>
     <div id="timeBlocks">
-        <a href="timer.html" class="timeBlock">Timer</a>
-        <a href="stopwatch.html" class="timeBlock">Stopwatch</a>
+        <a href="timer.html" class="timeBlock item1">Timer</a>
+        <a href="stopwatch.html" class="timeBlock item2">Stopwatch</a>
+        <a href="realtime.html" class="timeBlock item3">RealTime</a>
+        <a href="secondsIn.html" class="timeBlock item4">SecondsIn</a>
     </div>
-    <div><img src="/img/github.png" alt="github" class="github"> <a href="https://github.com/RuslanPr0g/TimeFlow" target="_blank" class="github">GitHub</a></div>
+    <footer>
+        <div><img src="/img/github.png" alt="github" class="github"> <a href="https://github.com/RuslanPr0g/TimeFlow" target="_blank" class="github">GitHub</a></div>
+    </footer>
 </body>
 </html>
