--- a/stopwatch.html
+++ b/stopwatch.html
@@ -11,7 +11,6 @@
     <script src='scripts/stopwatch.js'></script>
 </head>
 <body>
-    <a href="index.html" class="home">Home</a>
     <div id="stopWatch" class="timeBlock">
         <h2>STOPWATCH</h2>
         <div class="controls">
@@ -28,5 +27,9 @@
 
         </ul>
     </div>
+    <footer>
+        <a href="index.html" class="home">Home</a>
+        <div><img src="/img/github.png" alt="github" class="github"> <a href="https://github.com/RuslanPr0g/TimeFlow" target="_blank" class="github">GitHub</a></div>
+    </footer>
 </body>
 </html>
