--- a/secondsIn.html
+++ b/secondsIn.html
@@ -3,19 +3,24 @@
 <head>
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-    <title>Timer</title>
+    <title>SecondsIn</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel='stylesheet' type='text/css' media='screen' href='style/main.css'>
-    <link rel='stylesheet' type='text/css' media='screen' href='style/style-timer.css'>
+    <link rel='stylesheet' type='text/css' media='screen' href='style/style-secondsIn.css'>
     <link rel="icon" href="/img/time.ico" type="image/icon type">
-    <script src='scripts/timer.js'></script>
+    <script src='scripts/secondsIn.js'></script>
 </head>
 <body>
     <div id="timer" class="timeBlock">
-        <h2>TIMER</h2>
-        <input type="text" id="minutes">
-        <button id="startTimer" onclick="startReset()">Start</button>
-        <h3 id="countdown">00:00</h3>
+        <h2>Seconds In</h2>
+        <div id="result">
+            0
+        </div>
+        <div class="data-fields">
+            <input type="text" id="hours"> Hours
+            <input type="text" id="minutes"> Minutes
+            <button id="calculate" onclick="calculateSeconds()">Calculate</button>
+        </div>
     </div>
     <footer>
         <a href="index.html" class="home">Home</a>
