--- a/timer.html
+++ b/timer.html
@@ -13,7 +13,7 @@
 <body>
     <div id="timer" class="timeBlock">
         <h2>TIMER</h2>
-        <input type="text" id="minutes">
+        <div class="input-a"><input type="text" id="minutes"><a href="#" id="addm" onclick="addMinute()">+1</a></div>
         <button id="startTimer" onclick="startReset()">Start</button>
         <h3 id="countdown">00:00</h3>
     </div>
